attempting to correct overlap issues

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -56,12 +56,13 @@ button {
 /* ============ PROJECT CARD HOVER EFFECT ============= */
 .hovercontainer {
   position: relative;
-  width: 50%;
+  width: 100%;
+  max-width: 400px;
 }
 
 .projectimage {
   display: block;
-  width: 100%;
+  max-width: 100%;
   height: auto;
   border-radius: 15px;
 }
@@ -184,6 +185,7 @@ button {
 .social-link:visited {
   color: var(--secondary-neutral);
 }
+
 
 
 
